LIMO-286: Fixed text overflow with action button in snackbar

--- a/src/components/mdl/snackbar/_snackbar.scss
+++ b/src/components/mdl/snackbar/_snackbar.scss
@@ -13,6 +13,7 @@
 
   &__action{
     padding: 14px 24px;
+    overflow: visible;
   }
 
   &__icon{
